--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.3",
     "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "vite": "^4.4.9"
   }
 }
