--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
     "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.3",
-    "morgan": "^1.10.0"
-  },
-  "devDependencies": {
+    "morgan": "^1.10.0",
     "vite": "^4.4.9"
   }
 }
