--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview",
-    "start": "vite build && node server.js"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
