--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
     "jsonwebtoken": "^9.0.1",
+    "mailgun-js": "^0.22.0",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.3",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.5",
     "vite": "^4.4.9"
   },
   "devDependencies": {
