--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^7.4.3",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.5",
+    "react-modal": "^3.16.1",
     "vite": "^4.4.9"
   },
   "devDependencies": {
